[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Buttons.gd" type="Script" id=2]
[ext_resource path="res://src/fonts/TitanOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/icons/sound-on.png" type="Texture" id=4]
[ext_resource path="res://src/icons/speaker.png" type="Texture" id=5]
[ext_resource path="res://src/img/background2.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 120
outline_color = Color( 0.298039, 0.658824, 0.117647, 1 )
use_filter = true
extra_spacing_char = -3
extra_spacing_space = -8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 50
outline_size = 2
outline_color = Color( 0.164706, 0.164706, 0.164706, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 28
outline_size = 2
outline_color = Color( 0.180392, 0.180392, 0.180392, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 66
outline_size = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0285645, 0.40625, 0.372784, 1 )
border_width_left = 3
border_width_top = 1
border_width_right = 3
border_width_bottom = 4
border_color = Color( 0.0196078, 0.239216, 0.223529, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0181274, 0.257813, 0.236575, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0109482, 0.100098, 0.0922315, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0235294, 0.333333, 0.305882, 1 )
border_width_left = 3
border_width_top = 1
border_width_right = 3
border_width_bottom = 4
border_color = Color( 0.0153236, 0.150879, 0.138868, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=8]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 58
font_data = ExtResource( 3 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ 640.0 ]
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Conta" type="RichTextLabel" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -274.0
margin_top = -158.5
margin_right = 274.0
margin_bottom = -19.5
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]10 x 10 = ?[/center]"
text = "10 x 10 = ?"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Pontuacao" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.894118 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -616.0
margin_top = -336.0
margin_right = -96.0
margin_bottom = -277.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "Pontuação: 0"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Chances" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.894118 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -616.0
margin_top = -280.0
margin_right = -408.0
margin_bottom = -240.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Chances: 0"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Tempo" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.894118 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -616.0
margin_top = -248.0
margin_right = -408.0
margin_bottom = -208.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Tempo:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Dificuldade" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.894118 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -616.0
margin_top = -213.0
margin_right = -408.0
margin_bottom = -173.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 14 )
text = "Dificuldade"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Rodada" type="RichTextLabel" parent="NinePatchRect"]
modulate = Color( 1, 1, 1, 0.929412 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -352.0
margin_right = 96.0
margin_bottom = -274.0
size_flags_vertical = 0
custom_colors/default_color = Color( 0.282353, 0.960784, 0.25098, 0 )
custom_fonts/normal_font = SubResource( 15 )
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Voltar" type="Button" parent="NinePatchRect"]
margin_left = 16.0
margin_top = 640.0
margin_right = 184.0
margin_bottom = 701.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "Voltar"
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="Button" parent="NinePatchRect"]
margin_left = 1192.0
margin_top = 16.0
margin_right = 1262.0
margin_bottom = 86.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Button" parent="NinePatchRect"]
margin_left = 1104.0
margin_top = 16.0
margin_right = 1174.0
margin_bottom = 86.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ResButtons" type="Control" parent="NinePatchRect"]
margin_left = 480.0
margin_top = 377.0
margin_right = 800.0
margin_bottom = 582.0
__meta__ = {
"_edit_lock_": true
}

[node name="Res1" type="Button" parent="NinePatchRect/ResButtons"]
margin_left = 14.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 102.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "R1"
script = ExtResource( 2 )

[node name="Res2" type="Button" parent="NinePatchRect/ResButtons"]
margin_left = 162.0
margin_top = 7.0
margin_right = 306.0
margin_bottom = 102.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "R2"
script = ExtResource( 2 )

[node name="Res3" type="Button" parent="NinePatchRect/ResButtons"]
margin_left = 14.0
margin_top = 106.0
margin_right = 158.0
margin_bottom = 201.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "R3"
script = ExtResource( 2 )

[node name="Res4" type="Button" parent="NinePatchRect/ResButtons"]
margin_left = 162.0
margin_top = 106.0
margin_right = 306.0
margin_bottom = 201.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
text = "R4"
script = ExtResource( 2 )

[node name="ColorTimer" type="Timer" parent="NinePatchRect/ResButtons"]
wait_time = 0.5
one_shot = true

[node name="Timer" type="Timer" parent="NinePatchRect"]
wait_time = 10.0
one_shot = true

[node name="NextRoundTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="NinePatchRect/Voltar" to="NinePatchRect/Voltar" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Voltar" to="NinePatchRect/Voltar" method="_on_Voltar_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/Sound" to="NinePatchRect/Sound" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Sound" to="NinePatchRect/Sound" method="_on_Sound_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/Music" to="NinePatchRect/Music" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Music" to="NinePatchRect/Music" method="_on_Music_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/ResButtons/Res1" to="NinePatchRect/ResButtons/Res1" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/ResButtons/Res1" to="." method="_on_Res_pressed" binds= [ "Res1" ]]
[connection signal="mouse_entered" from="NinePatchRect/ResButtons/Res2" to="NinePatchRect/ResButtons/Res2" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/ResButtons/Res2" to="." method="_on_Res_pressed" binds= [ "Res2" ]]
[connection signal="mouse_entered" from="NinePatchRect/ResButtons/Res3" to="NinePatchRect/ResButtons/Res3" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/ResButtons/Res3" to="." method="_on_Res_pressed" binds= [ "Res3" ]]
[connection signal="mouse_entered" from="NinePatchRect/ResButtons/Res4" to="NinePatchRect/ResButtons/Res4" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/ResButtons/Res4" to="." method="_on_Res_pressed" binds= [ "Res4" ]]
[connection signal="timeout" from="NinePatchRect/ResButtons/ColorTimer" to="." method="_on_ColorTimer_timeout"]
[connection signal="timeout" from="NinePatchRect/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="NextRoundTimer" to="." method="_on_NextRoundTimer_timeout"]
